# modular_tree_py311

./: .gitignore  README.md  VERSION  build_mtree.bat  build_mtree.osx  build_mtree.sh
.github/workflows/: CD.yml  build_release.yml
addon/: __init__.py  operators.py  test.py
addon/nodes/properties/: ramp_property.py  random_property.py
addon/nodes/sockets/: property_socket.py
addon/nodes/tree_function_nodes/: branch_node.py  pipe_radius_node.py  tree_mesher_node.py  trunk_node.py
addon/resources/: resource_utils.py
addon/resources/geo_node/: geo_nodes.blend
m_tree/: CMakeLists.txt  install.py
m_tree/python_bindings/: CMakeLists.txt
m_tree/source/: CMakeLists.txt
src/: CMakeLists.txt
src/python_bindings/: CMakeLists.txt
src/source/: CMakeLists.txt
src/tests/: CMakeLists.txt
